# wakeyBot

./: Cargo.toml
src/: commands.rs  discord.rs  lib.rs  main.rs
