[package]
name = "wakey"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = { version = "0.11.2", default-features = false, features = ["client", "gateway", "rustls_backend", "model"] }
tokio = { version = "1.18.2", features = ["rt-multi-thread"] }
public-ip = "0.2.2"
wake-on-lan = "0.2.0"
