[package]
name = "wakey"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = { version = "0.11.2" }
tokio = { version = "1.18.2", features = ["rt-multi-thread"] }
wake-on-lan = "0.2.0"
env_logger = "0.9.0"
log = "0.4.17"